Tree Pattern and Examples: Clarify Home Key Description
For issues #223, #224, #225, and #226, modified the keyboard table of the tree view example pages and the keyboard section of the tree view design pattern.
For the description of the Home key, per suggestion from @annabbott and @MichielBijl, added the phrase "without opening or closing a node".

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2082,7 +2082,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
            </li>
           <li><kbd>Down Arrow</kbd>: Moves focus to the next node that is focusable without opening or closing a node.</li>
           <li><kbd>Up Arrow</kbd>: Moves focus to the previous node that is focusable without opening or closing a node.</li>
-          <li><kbd>Home</kbd>: Moves focus to the first node in the tree.</li>
+          <li><kbd>Home</kbd>: Moves focus to the first node in the tree without opening or closing a node.</li>
           <li><kbd>End</kbd>: Moves focus to the last node in the tree that is focusable without opening a node.</li>
           <li><kbd>Enter</kbd>: activates a node, i.e., performs its default action. For parent nodes, one possible default action is to open or close the node. In single-select trees where selection does not follow focus (see note below), the default action is typically to select the focused node.</li>
           <li>Type-ahead is recommended for all trees, especially for trees with more than 7 root nodes:
