update button example

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -62,12 +62,22 @@
     </ul>
   <section>
     <h2 id="ex_label">Example</h2>
+
+<svg>
+  <use xlink:href="#icon-sound"></use>
+</svg>
+
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="example">
       <p>This <q>Print</q> action button uses a <code>div</code> element.</p>
       <div tabindex="0" role="button" id="action">Print Page</div>
       <p>This <q>Mute</q> toggle button uses an <code>a</code> element.</p>
-      <a tabindex="0" role="button" id="toggle" aria-pressed="false">Mute <svg aria-hidden="true"><use xlink:href="#icon-sound"></use></svg></a>
+      <a tabindex="0" role="button" id="toggle" aria-pressed="false">
+        Mute 
+        <svg aria-hidden="true">
+          <use xlink:href="#icon-sound"></use>
+        </svg>
+      </a>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
