--- a/examples/alert/index.html
+++ b/examples/alert/index.html
@@ -36,7 +36,7 @@
 
         <!--  The following script element contains the content that will be inserted into the alert element. -->
         <script type="text/template" id="alert-template">
-          <p>Hej, hello, ciao, こんにちは, 안녕</p>
+          <p><span lang="da">Hej</span>, hello, <span lang="it">ciao</span>, <span lang="ja">こんにちは</span>, <span lang="ko">안녕</span></p>
         </script>
       </div>
       <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
