added links to SVG source code

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -149,6 +149,10 @@
       Javascript:
       <a href="js/button.js" type="text/javascript">button.js</a>
     </li>
+    <li>
+      SVG:
+      <a href="images/mute.svg" type="text/javascript">mute.svg</a>
+    </li>
     </ul>
   </section>
 
