updated link to SVG

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -151,7 +151,7 @@
     </li>
     <li>
       SVG:
-      <a href="images/mute.svg" type="text/javascript">mute.svg</a>
+      <a href="images/mute.svg" type="text/svg">mute.svg</a>
     </li>
     </ul>
   </section>
