Change example div ID parameter of html source display script to "example" so source will display. Delete second cal to scource Code.Add.

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -139,7 +139,6 @@
 
   <section>
     <h2>Javascript and CSS Source Code</h2>
-    <!--  After the js and css files are named with the name of this example, change the href and text of the following 2 links to refer to the appropriate js and css files.  -->
     <ul>
       <li>
         CSS:
@@ -158,8 +157,7 @@
     <pre><code id="source1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
     <script>
-      sourceCode.add('source1', 'ex1');
-      sourceCode.add('source1', 'ex2');
+      sourceCode.add('source1', 'example');
       sourceCode.make();
     </script>
   </section>
