--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-  <div id="main_content">
+  <div id="base_window_layer">
     <main>
       <h1>Modal Dialog Example</h1>
       <p>
@@ -36,7 +36,7 @@
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
         <div id="ex1">
           <button onclick="openDialog('dialog1', this)">Add Delivery Address</button>
-
+          <!-- Important: Note that the dialog container divs are all in a div at the end of the body that is outside the div containing all content for the base window layer. -->
         </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
       </section>
@@ -190,24 +190,19 @@
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
         <div id="sc1"></div>
+        <div id="sc2"></div>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
-        <!--
-          The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
-          It renders the HTML in the preceding div with ID 'sc1'.
-          If you change the ID of either the 'ex1' div or the 'sc1' div, be sure to update the sourceCode.add function parameters.
-          -->
         <script>
           sourceCode.add('sc1', 'ex1');
+          sourceCode.add('sc2', 'dialog_layer');
           sourceCode.make();
         </script>
       </section>
     </main>
     <nav>
-      <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
       <a href="../../#pattern_ID">EXAMPLE_NAME Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
   </div>
-
   <div id="dialog_layer">
     <div role="dialog" id="dialog1" aria-labelledby="dialog1_label" aria-modal="true" class="hidden">
       <h2 id="dialog1_label">Add Delivery Address</h2>
