Updated NUX description to describe new focus indicators

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -61,15 +61,23 @@
           </div>
         </div>
         <div id="grid-nux" class="grid-nux hidden" role="region" aria-label="Grid Instructions" tabindex="0">
-          <p>
+          <p class="grid-nux-header">
             Move keyboard focus inside a grid with arrow keys.
           </p>
-          <p>
-            Arrow keys work any time you see this focus ring with the arrow
-            indicators.
+          <p class="indicator_description">
+            <img src="imgs/black_keys.png" width="100" alt="Arrow keypad"
+              class="indicator_graphic" />
           </p>
           <p>
-            When the arrow key focus ring appears, other keys, including Home,
+            This focus ring indicates that arrow keys can be used.
+            <span class="indicator_description">
+              When focus is in a widget that allows for keyboard controls,
+              a keypad graphic will also appear in the corner of the page.
+            </span>
+          </p>
+
+          <p>
+            When the focus indicators appear, other keys, including Home,
             End, Ctrl-Home, Ctrl-End, Page Up, and Page Down may also be
             available to make keyboard navigation easier.
           </p>
