Add focus indicators to datagrids

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -366,7 +366,7 @@
         </li>
       </ol>
     </section>
-    <div id="arrow-keys-indicator" class="hidden" />
+    <div id="arrow-keys-indicator" class="hidden"></div>
   </section>
 
   <section>
