--- a/examples/feed/feedDisplay.html
+++ b/examples/feed/feedDisplay.html
@@ -22,7 +22,7 @@
       </div>
     </section>
     <section id="sidepanel">
-      Sidepanel goes here
+      <label for="delay-time-select">Select article loading delay</label>
       <select id="delay-time-select" name="delay_time">
         <option value="200">200 ms</option>
         <option value="400">400 ms</option>
