--- a/aria-practices.html
+++ b/aria-practices.html
@@ -214,7 +214,7 @@
       </section>
       <section class="notoc">
         <h4>Example</h4>
-        <p><a href="examples/accordion/accordion.html">Accordion Example</a>: demonstrates a form divided into three sections using an accordion to show one ssection at a time. </p>
+        <p><a href="examples/accordion/accordion.html">Accordion Example</a>: demonstrates a form divided into three sections using an accordion to show one section at a time. </p>
       </section>
     </section>
 
