--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -13,7 +13,7 @@
 
   <link href="css/menubarAction.css" rel="stylesheet">
 
-  <script src="js/StyleManager.js"    type="text/javascript"></script>
+  <script src="js/styleManager.js"    type="text/javascript"></script>
 
   <script src="js/MenubarAction.js"       type="text/javascript"></script>
   <script src="js/MenubarItemAction.js"   type="text/javascript"></script>
