--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Menu Button Example: Actions | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Menu Button Example: Actions (aria-acivedescendant) | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
-    <link rel="stylesheet" href="../../css/core.css">
-    <script src="../../js/examples.js"></script>
-    <script src="../../js/highlight.pack.js"></script>
-    <script src="../../js/app.js"></script>
+    <link rel="stylesheet" href="../css/core.css">
+    <script src="../js/examples.js"></script>
+    <script src="../js/highlight.pack.js"></script>
+    <script src="../js/app.js"></script>
 
     <link href="css/menuButtonAction.css" rel="stylesheet">
     <script src="js/Menubutton.js" type="text/javascript"></script>
-    <script src="js/MenuItemAction.js" type="text/javascript"></script>
-    <script src="js/PopupMenuAction.js" type="text/javascript"></script>
+    <script src="js/MenuItemActionActivedescendant.js" type="text/javascript"></script>
+    <script src="js/PopupMenuActionActivedescendant.js" type="text/javascript"></script>
   </head>
   <body>
     <main>
-      <h1>Actions Menu Button Example</h1>
+      <h1>Actions Menu Button Example (aria-activedescendant)</h1>
       <p>This example implements the <a href="../../../#menubutton">menu button design pattern</a>
-      for a button that provides access to a menu of actions.
-      When an element with role <code>button</code> has <code>aria-haspopup=&quot;true&quot;</code>,
-      browsers inform assistive technologies that the button is a menu button.
-      This role transformation caused by <code>aria-haspopup</code> happens with any element that is recognized as a button,
-      including the HTML <code>button</code> and <code>input[type="button"]</code> elements.
+      for a button that provides access to a menu of actions using <code>aria-activedescendant</code> to identify which button to focus on.
       </p>
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="../menu-button-2/menu-button-2.html">Navigation Menu Button</a>: The popup menu items are <code>a</code> elements and act as links.</li>
+        <li><a href="/menu-button-links.html">Navigation Menu Button</a>: The popup menu items are <code>a</code> elements and act as links.</li>
+        <li><a href="../radio/radio-2/radio-2.html">Radio Button Example</a>: Radiobutton using <code>aria-activedescendant</code>.
       </ul>
       <section>
         <h2 id="ex_label">Example</h2>
@@ -45,11 +42,11 @@
               Actions
             </button>
 
-            <ul id="menu1" role="menu" aria-labelledby="menubutton1">
-              <li role="menuitem"  onclick="updateLastAction(event)">Action 1</li>
-              <li role="menuitem"  onclick="updateLastAction(event)">Action 2</li>
-              <li role="menuitem"  onclick="updateLastAction(event)">Action 3</li>
-              <li role="menuitem"  onclick="updateLastAction(event)">Action 4</li>
+            <ul id="menu1" role="menu" aria-labelledby="menubutton1" aria-activedescendant="mi1">
+              <li id="mi1" role="menuitem"  onclick="updateLastAction(event)">Action 1</li>
+              <li id="mi2" role="menuitem"  onclick="updateLastAction(event)">Action 2</li>
+              <li id="mi3" role="menuitem"  onclick="updateLastAction(event)">Action 3</li>
+              <li id="mi4" role="menuitem"  onclick="updateLastAction(event)">Action 4</li>
             </ul>
           </div>
 
@@ -303,6 +300,20 @@
               </td>
             </tr>
             <tr>
+              <td>
+                <code></code>
+              </td>
+              <th scope="row"><code>aria-activedescendant=&quot;this.domnode.id&quot;</code></th>
+              <td>
+                <code>ul</code>
+              </td>
+              <td>
+                <ul>
+                  <li>Allows for focus to be changed by setting the setting the <code>aria-activedescendant</code> equal to the id of the menubutton.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
               <th scope="row">
                 <code>menuitem</code>
               </th>
@@ -342,9 +353,9 @@
 
         <ul>
           <li>CSS: <a href="css/menuButtonAction.css" type="text/css">MenubuttonAction.css</a></li>
-          <li>Javascript: <a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
-          <li>Javascript: <a href="js/MenuItemAction.js" type="text/javascript">MenuItemAction.js</a></li>
-          <li>Javascript: <a href="js/PopupMenuAction.js" type="text/javascript">PopupMenuAction.js</a></li>
+          <li>Javascript: <a href="js/Menubutton2.js" type="text/javascript">Menubutton2.js</a></li>
+          <li>Javascript: <a href="js/MenuItemActionActivedescendant.js" type="text/javascript">MenuItemActionActivedescendant.js</a></li>
+          <li>Javascript: <a href="js/PopupMenuActionActivedescendant.js" type="text/javascript">PopupMenuActionActivedescendant.js</a></li>
         </ul>
       </section>
       <section>
