--- a/examples/menu-button/menu-button-links.html
+++ b/examples/menu-button/menu-button-links.html
@@ -6,13 +6,13 @@
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
     <link rel="stylesheet" href="../../css/core.css">
-    <script src="../../js/examples.js"></script>
-    <script src="../../js/highlight.pack.js"></script>
-    <script src="../../js/app.js"></script>
+    <script src="../js/examples.js"></script>
+    <script src="../js/highlight.pack.js"></script>
+    <script src="../js/app.js"></script>
 
     <link href="css/MenubuttonLinks.css" rel="stylesheet">
 
-    <script src="js/Menubutton.js" type="text/javascript"></script>
+    <script src="js/Menubutton2.js" type="text/javascript"></script>
     <script src="js/PopupMenuLinks.js" type="text/javascript"></script>
     <script src="js/MenuItemLinks.js" type="text/javascript"></script>
   </head>
