Support enter key behaviors on row (open message) and on first cell (toggle expansion)

--- a/examples/treegrid/treegrid-row-nav-primary-1.html
+++ b/examples/treegrid/treegrid-row-nav-primary-1.html
@@ -281,6 +281,8 @@
         <td>
           <ul>
             <li>Performs default action on row or cell, e.g. opens message or navigate to link.</li>
+            <li>If focus is on the cell with the expand/collapse button, and there is no other action,
+              will toggle expansion of the current row.</li>
           </ul>
         </td>
       </tr>
