--- a/examples/treegrid/treegrid-row-nav-primary-1.html
+++ b/examples/treegrid/treegrid-row-nav-primary-1.html
@@ -65,8 +65,6 @@
           </tr>
         </thead>
         <tbody>
-          <!-- Filed https://bugzilla.validator.nu/show_bug.cgi?id=1033 on Nu Validator
-            because aria-setsize, aria-posinset not allowed -->
           <tr role="row" aria-level="1" aria-posinset="1" aria-setsize="1" aria-expanded="true">
             <td role="gridcell">Treegrids are broken</td>
             <td role="gridcell">How do we fix them?</td>
@@ -125,11 +123,11 @@
     <ul>
       <li>roles used are treegrid, row, gridcell and columnheader.</li>
       <li>aria-level: used to set the current level of an item, 1, 2, 3, etc.</li>
-      <li>aria-posinset, aria-setsize: used on a row to indicate the position of an item within it's local group, such as item 3 of 5. Unfortunately, this is not currently legal in the spec, so we'll need to work that in as this is the most practical way of implementing ARIA in many existing treegrid libraries (as opposed to rearchitecting the
-      DOM structure to contain rowgroups).</li>
+      <li>aria-posinset, aria-setsize: used on a row to indicate the position of an item within it's local group, such as item 3 of 5. Unfortunately, <a href="https://github.com/w3c/aria/issues/558">aria-posinset and aria-setsize are not currently legal in the spec (bug filed)</a>. Therefore, <a href="https://bugzilla.validator.nu/show_bug.cgi?id=1033">aria-posinset and aria-setsize are not currently supported on role="row" in the Nu Validator (bug filed)</a>. We'll need to work that in as this is the most practical way of implementing ARIA in many existing treegrid libraries (as opposed to rearchitecting the
+      DOM structure to contain rowgroups). Note that the <a href="https://github.com/w3c/aria/issues/553">ARIA spec's text for rowgroup states that it cannot be parented by a treegrid (bug filed)</a>.</li>
       <li>aria-expanded (tristate): this attribute must be removed (not present) if the item cannot be expanded. For expandable items, the value is "true" or "false"</li>
       <li>aria-hidden: set to "true" for child items that are currently hidden because the parent is collapsed.</li>
-      <li>aria-readonly: in ARIA 1.0, a grid/treegrid is editable by default. However, there is no default in ARIA 1.1. Firefox currently implements the ARIA 1.0 concept for this, which means that "editable" is read for every cell unless aria-readonly="true" is used on the treegrid. There needs to be some follow up with user agent developers on this, as ARIA 1.1 seems to be treating it more a tristate (don't care, false, true).</li>
+      <li>aria-readonly: in ARIA 1.0, a grid/treegrid is editable by default. However, there is no default in ARIA 1.1. Firefox currently implements the ARIA 1.0 concept for this, which means that "editable" is read for every cell unless aria-readonly="true" is used on the treegrid. There needs to be some follow up with user agent developers on this, as ARIA 1.1 seems to be treating it more a tristate (don't care, false, true). In addition, <a href="https://github.com/w3c/aria/issues/550">a bug was filed on the spec regarding aria-readonly but it is possibly invalid</a>.</li>
       <li>tabindex is set in the JS, as per the usual roving tabindex methodology. Specifically, we use tabindex="0" for the current item so that it is the subitem that gets focused if user tabs out and back in, and tabindex="-1" for all items where we want click-to-focus behavior enabled.</li>
     </ul>
 
