Long Description Disclosure Example: Correct Typos in Disclosure H3
For issue #264, per feedback from @annabbott, modified examples/disclosure/disclosure-img-long-description.html:
Corrected two typos in the H3 contained inside the disclosure.

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -60,7 +60,7 @@
   <p><strong>Note: A French translation from Wikipeedia.</strong></p>
         <button aria-expanded="true" aria-controls="id_long_desc">Data Table for Minard's Chart</button>
         <div id="id_long_desc">
-          <h3 id="id_data_label">Data for Charles Minars's Chart of Naploean's Invasion of Russia</h3>
+          <h3 id="id_data_label">Data for Charles Minard's Chart of Napoleon's Invasion of Russia</h3>
           <table aria-labelledby="id_data_label" class="data">
             <thead>
               <tr>
