--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <title>Modal Dialog Example | WAI-ARIA Authoring Practices 1.1</title>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
 <link href="../css/core.css" rel="stylesheet">
