testing scroll=fix

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -21,7 +21,7 @@
 <body>
   <div id="base_window_layer">
     <main>
-      <h1>Moedal Dialog Example</h1>
+      <h1>Modal Dialog Example</h1>
       <p>
         <strong>NOTE:</strong> Please provide feedback on this example in
         <a href="https://github.com/w3c/aria-practices/issues/321">issue 321.</a>
