Updated menu examples to use new pattern for aria-expanded and added an aria-active descendant example

--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -23,8 +23,8 @@
       </p>
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="/menu-button-links.html">Navigation Menu Button</a>: The popup menu items are <code>a</code> elements and act as links.</li>
-        <li><a href="../radio/radio-2/radio-2.html">Radio Button Example</a>: Radiobutton using <code>aria-activedescendant</code>.
+        <li><a href="menu-button-actions.html">Action Menu Button</a>: The popup menu items can be used to activate actions in a web application.</li>
+        <li><a href="menu-button-links.html">Navigation Menu Button</a>: The popup menu items are <code>a</code> elements and act as links.</li>
       </ul>
       <section>
         <h2 id="ex_label">Example</h2>
@@ -36,7 +36,6 @@
             <button
                 id="menubutton1"
                 aria-haspopup="true"
-                aria-expanded="false"
                 aria-controls="menu1"
                 >
               Actions
@@ -240,17 +239,17 @@
                 <td><code>button</code></td>
                 <td>
                   <ul>
-                    <li>Indicates popup menu is open.</li>
+                    <li>The <code>aria-expanded</code> attribute with the value <code>true</code> is add when the menu is open.</li>
                   </ul>
                 </td>
             </tr>
             <tr>
                 <td></td>
-                <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
+                <th scope="row"><code>aria-expanded</code></th>
                 <td><code>button</code></td>
                 <td>
                   <ul>
-                    <li>Indicates popup menu is closed.</li>
+                    <li>The <code>aria-expanded</code> attribute is removed when the menu is closed.</li>
                   </ul>
                 </td>
             </tr>
