--- a/examples/menu-button/menu-button-links.html
+++ b/examples/menu-button/menu-button-links.html
@@ -6,7 +6,7 @@
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
-    <link rel="stylesheet" href="../../css/core.css">
+    <link rel="stylesheet" href="../css/core.css">
     <script src="../js/examples.js"></script>
     <script src="../js/highlight.pack.js"></script>
     <script src="../js/app.js"></script>
@@ -87,6 +87,7 @@
 
               </script>
             </div>
+          </div>
         </div>
 
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
@@ -384,7 +385,7 @@
 
         <ul>
           <li>CSS: <a href="css/menubuttonLinks.css" type="text/css">MenubuttonLinks.css</a></li>
-          <li>Javascript: <a href="js/Menubutton2.js" type="text/javascript">Menubutton2.js</a></li>
+          <li>Javascript: <a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
           <li>Javascript: <a href="js/MenuItemLinks.js" type="text/javascript">MenuItemLinks.js</a></li>
           <li>Javascript: <a href="js/PopupMenuLinks.js" type="text/javascript">PopupMenuLinks.js</a></li>
         </ul>
