--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1512,12 +1512,17 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
         <h4>Examples</h4>
         <ul>
           <li>
-            <a href="examples/menu-button/menu-button-1/menu-button-1.html">Actions Menu Button Example</a>:
+            <a href="examples/menu-button/menu-button-actions.html">Actions Menu Button Example</a>:
             Menu button that opens a popup menu of actions that uses a <code>button</code> element for the menu button.
           </li>
           <li>
-            <a href="examples/menu-button/menu-button-2/menu-button-2.html">Navigation Menu Button Example</a>:
+            <a href="examples/menu-button/menu-button-links.html">Navigation Menu Button Example</a>:
             Menu button that opens a popup menu of links that uses a <code>a</code> element for the menu button.
+          </li>
+          <li>
+            <a href="examples/menu-button/menu-button-actions-active-descendant.html">Actions Menu Button (aria-activedescendant) Example</a>:
+            Menu button that opens a popup menu of actions that uses a <code>button</code> element for the menu button and uses the 
+            <code>aria-activedescendant</code> to indicate menuitem with focus.
           </li>
         </ul>
       </section>
